# sn851-pipeline

./: .gitignore  README.md  configuration.yaml  env_images.json  pyproject.toml  requirements.txt
docs/: checkpointing-and-observability.md
pipeline/: __init__.py  main.py
pipeline/app/: __init__.py  cli.py  orchestrator.py
pipeline/config/: __init__.py  loader.py  pipeline_config.py  snapshot.py
pipeline/core/: __init__.py
pipeline/core/execution/: __init__.py  rollout.py
pipeline/core/sampling/: __init__.py  sampler.py
pipeline/core/scoring/: __init__.py  checkpoint_fs.py  evaluator.py  exporter.py  reward.py
pipeline/core/state/: replay_buffer.py
pipeline/core/training/: __init__.py  trainer.py
pipeline/integration/: __init__.py  affine_config.py  backends.py  environment_executor.py  model_guard.py  policy.py  runtime.py  trainer_backend.py
pipeline/observability/: __init__.py  factory.py  noop.py  protocols.py
pipeline/observability/prometheus/: __init__.py  recorder.py
pipeline/persistence/: __init__.py  factory.py  noop.py  protocols.py
pipeline/persistence/postgres/: __init__.py  connection.py  repository.py  schema.sql
pipeline/persistence/postgres/migrations/: 001_orchestrator_steps_weights_updated_at.sql
pipeline/schemas/: __init__.py  models.py
